--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <h1>Better Solutions For Your Business</h1>
           <h2>We are team of talented designers making websites with Bootstrap</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="Ahmed Hassan Cairo 2.html" class="btn-get-started scrollto" id = "userpass">Get Started</a>
+            <a href="#" class="btn-get-started scrollto" id = "userpass">Get Started</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
